qt6/gen_qlistwidget.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QListWidget_override_virtual_updateGeometries(void* self, intptr_t slot);
bool QListWidget_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QListWidget_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QListWidget_override_virtual_selectionChanged(void* self, intptr_t slot);
void QListWidget_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QListWidget_override_virtual_currentChanged(void* self, intptr_t slot);
void QListWidget_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QListWidget_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QListWidget_virtualbase_viewportSizeHint(const void* self);
bool QListWidget_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QListWidget_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QListWidget_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QListWidget_virtualbase_sizeHintForRow(const void* self, int row);
bool QListWidget_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QListWidget_virtualbase_sizeHintForColumn(const void* self, int column);
bool QListWidget_override_virtual_itemDelegateForIndex(void* self, intptr_t slot);
QAbstractItemDelegate* QListWidget_virtualbase_itemDelegateForIndex(const void* self, QModelIndex* index);
bool QListWidget_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QListWidget_virtualbase_inputMethodQuery(const void* self, int query);
bool QListWidget_override_virtual_selectAll(void* self, intptr_t slot);
void QListWidget_virtualbase_selectAll(void* self);
bool QListWidget_override_virtual_updateEditorData(void* self, intptr_t slot);
void QListWidget_virtualbase_updateEditorData(void* self);
bool QListWidget_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QListWidget_virtualbase_updateEditorGeometries(void* self);
bool QListWidget_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QListWidget_virtualbase_verticalScrollbarAction(void* self, int action);
bool QListWidget_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QListWidget_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QListWidget_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QListWidget_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QListWidget_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QListWidget_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QListWidget_override_virtual_closeEditor(void* self, intptr_t slot);
void QListWidget_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QListWidget_override_virtual_commitData(void* self, intptr_t slot);
void QListWidget_virtualbase_commitData(void* self, QWidget* editor);
bool QListWidget_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QListWidget_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QListWidget_override_virtual_edit2(void* self, intptr_t slot);
bool QListWidget_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QListWidget_override_virtual_selectionCommand(void* self, intptr_t slot);
int QListWidget_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QListWidget_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QListWidget_virtualbase_focusNextPrevChild(void* self, bool next);
bool QListWidget_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QListWidget_virtualbase_viewportEvent(void* self, QEvent* event);
bool QListWidget_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QListWidget_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QListWidget_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QListWidget_override_virtual_focusInEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QListWidget_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QListWidget_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QListWidget_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QListWidget_override_virtual_eventFilter(void* self, intptr_t slot);
bool QListWidget_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QListWidget_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QListWidget_virtualbase_minimumSizeHint(const void* self);
bool QListWidget_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QListWidget_virtualbase_sizeHint(const void* self);
bool QListWidget_override_virtual_setupViewport(void* self, intptr_t slot);
void QListWidget_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QListWidget_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QListWidget_override_virtual_changeEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_changeEvent(void* self, QEvent* param1);
bool QListWidget_override_virtual_initStyleOption(void* self, intptr_t slot);
void QListWidget_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QListWidget_override_virtual_devType(void* self, intptr_t slot);
int QListWidget_virtualbase_devType(const void* self);
bool QListWidget_override_virtual_setVisible(void* self, intptr_t slot);
void QListWidget_virtualbase_setVisible(void* self, bool visible);
bool QListWidget_override_virtual_heightForWidth(void* self, intptr_t slot);
int QListWidget_virtualbase_heightForWidth(const void* self, int param1);
bool QListWidget_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QListWidget_virtualbase_hasHeightForWidth(const void* self);
bool QListWidget_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QListWidget_virtualbase_paintEngine(const void* self);
bool QListWidget_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);