qt6/gen_qlistwidget.nim

proc fcQListWidget_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_updateGeometries".}
proc fQListWidget_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QListWidget_virtualbase_isIndexHidden".}
proc fcQListWidget_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_isIndexHidden".}
proc fQListWidget_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QListWidget_virtualbase_selectionChanged".}
proc fcQListWidget_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_selectionChanged".}
proc fQListWidget_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QListWidget_virtualbase_currentChanged".}
proc fcQListWidget_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_currentChanged".}
proc fQListWidget_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QListWidget_virtualbase_viewportSizeHint".}
proc fcQListWidget_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_viewportSizeHint".}
proc fQListWidget_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QListWidget_virtualbase_keyboardSearch".}
proc fcQListWidget_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_keyboardSearch".}
proc fQListWidget_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QListWidget_virtualbase_sizeHintForRow".}
proc fcQListWidget_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_sizeHintForRow".}
proc fQListWidget_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QListWidget_virtualbase_sizeHintForColumn".}
proc fcQListWidget_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_sizeHintForColumn".}
proc fQListWidget_virtualbase_itemDelegateForIndex(self: pointer, index: pointer): pointer{.importc: "QListWidget_virtualbase_itemDelegateForIndex".}
proc fcQListWidget_override_virtual_itemDelegateForIndex(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_itemDelegateForIndex".}
proc fQListWidget_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QListWidget_virtualbase_inputMethodQuery".}
proc fcQListWidget_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_inputMethodQuery".}
proc fQListWidget_virtualbase_selectAll(self: pointer, ): void{.importc: "QListWidget_virtualbase_selectAll".}
proc fcQListWidget_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_selectAll".}
proc fQListWidget_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QListWidget_virtualbase_updateEditorData".}
proc fcQListWidget_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_updateEditorData".}
proc fQListWidget_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QListWidget_virtualbase_updateEditorGeometries".}
proc fcQListWidget_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_updateEditorGeometries".}
proc fQListWidget_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QListWidget_virtualbase_verticalScrollbarAction".}
proc fcQListWidget_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_verticalScrollbarAction".}
proc fQListWidget_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QListWidget_virtualbase_horizontalScrollbarAction".}
proc fcQListWidget_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_horizontalScrollbarAction".}
proc fQListWidget_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QListWidget_virtualbase_verticalScrollbarValueChanged".}
proc fcQListWidget_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_verticalScrollbarValueChanged".}
proc fQListWidget_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QListWidget_virtualbase_horizontalScrollbarValueChanged".}
proc fcQListWidget_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_horizontalScrollbarValueChanged".}
proc fQListWidget_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QListWidget_virtualbase_closeEditor".}
proc fcQListWidget_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_closeEditor".}
proc fQListWidget_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QListWidget_virtualbase_commitData".}
proc fcQListWidget_override_virtual_commitData(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_commitData".}
proc fQListWidget_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QListWidget_virtualbase_editorDestroyed".}
proc fcQListWidget_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_editorDestroyed".}
proc fQListWidget_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QListWidget_virtualbase_edit2".}
proc fcQListWidget_override_virtual_edit2(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_edit2".}
proc fQListWidget_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QListWidget_virtualbase_selectionCommand".}
proc fcQListWidget_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_selectionCommand".}
proc fQListWidget_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QListWidget_virtualbase_focusNextPrevChild".}
proc fcQListWidget_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_focusNextPrevChild".}
proc fQListWidget_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QListWidget_virtualbase_viewportEvent".}
proc fcQListWidget_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_viewportEvent".}
proc fQListWidget_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_mousePressEvent".}
proc fcQListWidget_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_mousePressEvent".}
proc fQListWidget_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_mouseDoubleClickEvent".}
proc fcQListWidget_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_mouseDoubleClickEvent".}
proc fQListWidget_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_dragEnterEvent".}
proc fcQListWidget_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_dragEnterEvent".}
proc fQListWidget_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_focusInEvent".}
proc fcQListWidget_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_focusInEvent".}
proc fQListWidget_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_focusOutEvent".}
proc fcQListWidget_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_focusOutEvent".}
proc fQListWidget_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_keyPressEvent".}
proc fcQListWidget_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_keyPressEvent".}
proc fQListWidget_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_inputMethodEvent".}
proc fcQListWidget_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_inputMethodEvent".}
proc fQListWidget_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QListWidget_virtualbase_eventFilter".}
proc fcQListWidget_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_eventFilter".}
proc fQListWidget_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QListWidget_virtualbase_minimumSizeHint".}
proc fcQListWidget_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_minimumSizeHint".}
proc fQListWidget_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QListWidget_virtualbase_sizeHint".}
proc fcQListWidget_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_sizeHint".}
proc fQListWidget_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QListWidget_virtualbase_setupViewport".}
proc fcQListWidget_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_setupViewport".}
proc fQListWidget_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QListWidget_virtualbase_contextMenuEvent".}
proc fcQListWidget_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_contextMenuEvent".}
proc fQListWidget_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QListWidget_virtualbase_changeEvent".}
proc fcQListWidget_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_changeEvent".}
proc fQListWidget_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QListWidget_virtualbase_initStyleOption".}
proc fcQListWidget_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_initStyleOption".}
proc fQListWidget_virtualbase_devType(self: pointer, ): cint{.importc: "QListWidget_virtualbase_devType".}
proc fcQListWidget_override_virtual_devType(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_devType".}
proc fQListWidget_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QListWidget_virtualbase_setVisible".}
proc fcQListWidget_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_setVisible".}
proc fQListWidget_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QListWidget_virtualbase_heightForWidth".}
proc fcQListWidget_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_heightForWidth".}
proc fQListWidget_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QListWidget_virtualbase_hasHeightForWidth".}
proc fcQListWidget_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_hasHeightForWidth".}
proc fQListWidget_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QListWidget_virtualbase_paintEngine".}
proc fcQListWidget_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_paintEngine".}
proc fQListWidget_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_keyReleaseEvent".}
proc fcQListWidget_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_keyReleaseEvent".}
